--- a/src/App.scss
+++ b/src/App.scss
@@ -1,16 +1,54 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-body {
-  min-height: 100vh;
-  scroll-behavior: smooth;
-  text-rendering: optimizeSpeed;
-  line-height: 1.5;
-}
+.article {
+  position: relative;
+  padding: 10rem 3rem;
 
-h3 {
-  background-color: red;
-  color: gold;
+  &__wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(16rem, 18rem));
+    // grid-template-columns: repeat(3, 1fr);
+    gap: 7rem;
+    place-content: center;
+  }
+
+  &__item {
+    background: #2c303a;
+    padding: 1.5rem 1.5rem 2rem;
+    margin: 2rem 0;
+    border-radius: 10px;
+    position: relative;
+    z-index: 1;
+  }
+  &__img-container {
+    position: absolute;
+    top: -55%;
+    left: 0;
+  }
+  &__img {
+    clip-path: circle(66px at center);
+  }
+  &__header {
+    font-size: 2rem;
+    color: #fff;
+    padding-top: 2.5rem;
+    text-align: center;
+  }
+  &__desc {
+    padding: 0.5rem 0.5rem;
+    font-size: 0.9rem;
+    color: #fff;
+  }
+  &__btn {
+    width: 100%;
+    border: none;
+    font-size: 1rem;
+    background: #444857;
+    padding: 1rem;
+    color: #76daff;
+    border-radius: 5px;
+    cursor: pointer;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    text-align: center;
+    font-weight: 600;
+  }
 }
