--- a/src/Article.scss
+++ b/src/Article.scss
@@ -1,7 +1,7 @@
 .article {
   &__item {
     background: #2c303a;
-    padding-top: 3.3rem;
+    padding-top: 2rem;
     margin: 2rem 0;
     border-radius: 10px;
     position: relative;
@@ -9,8 +9,9 @@
   }
   &__img-container {
     position: absolute;
-    top: -50%;
+    top: -48%;
     left: 0;
+    z-index: -10;
   }
   &__img {
     clip-path: circle(90px at center);
@@ -18,15 +19,14 @@
   &__header {
     font-size: 2rem;
     color: #fff;
-    padding-top: 2.5rem;
+    padding-top: 2rem;
     text-align: center;
   }
   &__desc {
-    padding: 1px 1px;
-    // margin: 1px 1px;
-    font-size: 0.8rem;
+    padding: 0.5rem 1rem;
+    font-size: 0.9rem;
     font-weight: 500;
-    line-height: 1.4;
+    line-height: 1.5;
     color: #fff;
   }
   &__btn {
@@ -42,5 +42,11 @@
     text-overflow: ellipsis;
     text-align: center;
     font-weight: 600;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      background-color: #71beda;
+      color: #fff;
+    }
   }
 }
