fixed issue with text content and hover effect in small viewport

--- a/src/Article.scss
+++ b/src/Article.scss
@@ -23,6 +23,7 @@
     text-align: center;
   }
   &__desc {
+    min-height: 250px;
     padding: 0.5rem 1rem;
     font-size: 0.9rem;
     font-weight: 500;
